# tempoeval

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: METRICS.md  PUBLISHING.md  index.md  requirements.txt
docs/concepts/: focus_time.md  index.md  modes.md
docs/concepts/metrics/: index.md
docs/concepts/metrics/available_metrics/: anchor_coverage.md  answer_temporal_alignment.md  answer_temporal_recall.md  cross_period_reasoning.md  duration_accuracy.md  event_ordering.md  index.md  ndcg_full_coverage.md  tempo_score.md  temporal_coherence.md  temporal_consistency.md  temporal_coverage.md  temporal_diversity.md  temporal_faithfulness.md  temporal_hallucination.md  temporal_map.md  temporal_mrr.md  temporal_ndcg.md  temporal_persistence.md  temporal_precision.md  temporal_recall.md  temporal_relevance.md  temporal_year_precision.md  temporal_year_recall.md
docs/concepts/metrics/overview/: index.md
docs/getstarted/: index.md  installation.md  quickstart.md
docs/overrides/: .gitkeep
docs/references/: composite.md  generation.md  reasoning.md  retrieval.md
docs/references/api/: core.md  datasets.md  efficiency.md  llm_providers.md  retrievers.md
docs/stylesheets/: extra.css
docs/tutorials/: datasets.md  index.md  rag_pipeline.md  retrieval.md
examples/: .env.example  01_retrieval_bm25.py  02_rag_generation.py  03_full_pipeline.py  04_tempo_dataset.py  05_cross_period.py  06_tempo_hsm_complete.py  07_generate_guidance.py  08_pipeline_with_generated_guidance.py  09_bm25_tempo_hsm.py  README.md  generated_guidance.json  reproduce_sigir_results.py  tempo_hsm_results_threaded.json
tempoeval/: __init__.py  version.py
tempoeval/benchmark/: reporter.py  runner.py
tempoeval/cli/: __init__.py
tempoeval/core/: __init__.py  base.py  config.py  evaluator.py  focus_time.py  result.py
tempoeval/datasets/: __init__.py  base.py  complex_tempqa.py  situatedqa.py  tempo.py  timebench.py  timeqa.py
tempoeval/efficiency/: tracker.py
tempoeval/guidance/: __init__.py  batch_label_dataset.py  generator.py  prompts.py
tempoeval/llm/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  gemini_provider.py  litellm_provider.py  openai_provider.py
tempoeval/meta_eval/: base.py  synthetic_failures.py  validator.py
tempoeval/metrics/: __init__.py
tempoeval/metrics/composite/: __init__.py  tempo_score.py
tempoeval/metrics/generation/: __init__.py  answer_temporal_alignment.py  answer_temporal_recall.py  temporal_coherence.py  temporal_faithfulness.py  temporal_hallucination.py
tempoeval/metrics/reasoning/: __init__.py  cross_period_reasoning.py  duration_accuracy.py  event_ordering.py  temporal_consistency.py
tempoeval/metrics/retrieval/: __init__.py  anchor_coverage.py  ndcg_full_coverage.py  temporal_coverage.py  temporal_diversity.py  temporal_map.py  temporal_mrr.py  temporal_ndcg.py  temporal_persistence.py  temporal_precision.py  temporal_recall.py  temporal_relevance.py  temporal_year_precision.py  temporal_year_recall.py
tempoeval/prompts/: __init__.py
tempoeval/retrieval/: __init__.py  api_retrievers.py  base.py  bm25.py  dense.py  llm_retrievers.py
tempoeval/utils/: __init__.py  safe_values.py  temporal_parser.py
tests/: __init__.py  test_base_metrics.py  test_composite_metrics.py  test_config_result.py  test_core.py  test_efficiency.py  test_evaluator.py  test_generation_metrics.py  test_imports.py  test_llm_providers.py  test_reasoning_metrics.py  test_retrieval_metrics.py
